src/test/ui/fmt/format-args-capture-missing-variables.stderr
error: named argument never used
  --> $DIR/format-args-capture-missing-variables.rs:8:51
   |
LL |     format!("{valuea} {valueb}", valuea=5, valuec=7);
   |             -------------------                   ^ named argument never used
   |             |
   |             formatting specifier missing

error[E0425]: cannot find value `foo` in this scope
  --> $DIR/format-args-capture-missing-variables.rs:2:17
   |
LL |     format!("{} {foo} {} {bar} {}", 1, 2, 3);
   |                 ^^^^^ not found in this scope

error[E0425]: cannot find value `bar` in this scope
  --> $DIR/format-args-capture-missing-variables.rs:2:26
   |
LL |     format!("{} {foo} {} {bar} {}", 1, 2, 3);
   |                          ^^^^^ not found in this scope

error[E0425]: cannot find value `foo` in this scope
  --> $DIR/format-args-capture-missing-variables.rs:6:14
   |
LL |     format!("{foo}");
   |              ^^^^^ not found in this scope

error[E0425]: cannot find value `valueb` in this scope
  --> $DIR/format-args-capture-missing-variables.rs:8:23
   |
LL |     format!("{valuea} {valueb}", valuea=5, valuec=7);
   |                       ^^^^^^^^ not found in this scope

error[E0425]: cannot find value `foo` in this scope
  --> $DIR/format-args-capture-missing-variables.rs:14:9
   |
LL |         {foo}
   |         ^^^^^ not found in this scope

error[E0425]: cannot find value `foo` in this scope
  --> $DIR/format-args-capture-missing-variables.rs:19:13
   |
LL |     panic!("{foo} {bar}", bar=1);
   |             ^^^^^ not found in this scope

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0425`.
